force-app/main/default/objects/Loan_Impact__c/Loan_Impact__c.object-meta.xml
<CustomObject>
    <label>Loan Impact</label>
    <nameField>
        <displayFormat>LIMP-{000000}</displayFormat>
        <label>Loan Impact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Impact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>