force-app/main/default/objects/Loan_Impact__c/fields/Active_Number_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Active_Number_of_Jobs__c</fullName>
    <label>Active Number of Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>